# compchemkit

./: README.md  pyproject.toml  requirements.txt  setup.py
compchemkit/: ccktypes.py  classifier.py  data_balance.py  data_split.py  data_storage.py  filtering.py  fingerprints.py  kernel.py  model_evaluation.py  model_generator.py  molecular_heatmaps.py  supporting_functions.py
compchemkit/ml_utilities/: fingerprints.py  visualization.py
compchemkit/utils/: custom_types.py  matrix.py  molecule_validity.py  parallel.py
tests/: fingerprints.py  run_tests.py  test_fingerprints.py  test_kernel.py
tests/test_data/: test_smiles.tsv
