[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "compchemkit"
authors = [
    {name = "Christian W. Feldmann", email = "christian.w.feldmann@gmail.com"},
]
description = "Classes and functions useful for chemoinformatics"
version = "0.1.1"
license = {text = "BSD"}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}